// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LicenceSelectorField component should render default view 1`] = `
<GenericSelectField
  canUnselect={true}
  error={false}
  errorText=""
  genericSelectFieldId="rek-license"
  hideLabel={false}
  input={
    Object {
      "onChange": [MockFunction],
      "value": Array [
        "test",
        "test1",
      ],
    }
  }
  itemsList={
    Array [
      Object {
        "description": Array [
          "I AGREE TO ACKNOWLEDGE any re-use of this dataset in any research outputs where reliance is made upon it, including conference papers and published research papers.",
          "The agreed form of acknowledgement is as a full citation as presented on the UQ eSpace record for this dataset.",
        ],
        "link": "http://guides.library.uq.edu.au/deposit_your_data/terms_and_conditions",
        "text": "Permitted Re-use with Acknowledgement",
        "value": 453701,
      },
      Object {
        "description": Array [
          "I AGREE TO ACKNOWLEDGE any re-use of this dataset in any research outputs where reliance is made upon it, including conference papers and published research papers.",
          "I FURTHER AGREE TO A COMMERCIAL USE RESTRICTION on this dataset, or data included in it and to only and to only use this data in non-commercial endeavours.",
          "The agreed form of acknowledgement is a full citation as presented on the UQ eSpace record for this record for this dataset.",
        ],
        "link": "http://guides.library.uq.edu.au/deposit_your_data/terms_and_conditions",
        "text": "Permitted Re-Use with Commercial Use Restriction",
        "value": 454104,
      },
      Object {
        "description": Array [
          "I AGREE TO ACKNOWLEDGE any re-use of this dataset in any research outputs where reliance is made upon it, including conference papers and published research papers.",
          "I FURTHER AGREE TO A SHARE ALIKE RESTRICTION on this dataset, or any data included in it, which means that I Agree that I remix, transform or build upon the data, I will contributions on the same Share Alike basis as the original.",
          "The agreed form of acknowledgement is a full citation as presented on the UQ eSpace record for this record for this dataset.",
        ],
        "link": "http://guides.library.uq.edu.au/deposit_your_data/terms_and_conditions",
        "text": "Permitted Re-Use with Share Alike Requirement",
        "value": 454105,
      },
    ]
  }
  label="License selector field"
  locale={
    Object {
      "label": "License selector field",
    }
  }
  onChange={[MockFunction]}
  value={
    Array [
      "test",
      "test1",
    ]
  }
/>
`;

exports[`LicenceSelectorField component should render error and error message 1`] = `
<GenericSelectField
  canUnselect={true}
  error={false}
  errorText=""
  genericSelectFieldId="rek-license"
  hideLabel={false}
  input={
    Object {
      "onChange": [MockFunction],
      "value": Array [
        "test",
        "test1",
      ],
    }
  }
  itemsList={
    Array [
      Object {
        "description": Array [
          "I AGREE TO ACKNOWLEDGE any re-use of this dataset in any research outputs where reliance is made upon it, including conference papers and published research papers.",
          "The agreed form of acknowledgement is as a full citation as presented on the UQ eSpace record for this dataset.",
        ],
        "link": "http://guides.library.uq.edu.au/deposit_your_data/terms_and_conditions",
        "text": "Permitted Re-use with Acknowledgement",
        "value": 453701,
      },
      Object {
        "description": Array [
          "I AGREE TO ACKNOWLEDGE any re-use of this dataset in any research outputs where reliance is made upon it, including conference papers and published research papers.",
          "I FURTHER AGREE TO A COMMERCIAL USE RESTRICTION on this dataset, or data included in it and to only and to only use this data in non-commercial endeavours.",
          "The agreed form of acknowledgement is a full citation as presented on the UQ eSpace record for this record for this dataset.",
        ],
        "link": "http://guides.library.uq.edu.au/deposit_your_data/terms_and_conditions",
        "text": "Permitted Re-Use with Commercial Use Restriction",
        "value": 454104,
      },
      Object {
        "description": Array [
          "I AGREE TO ACKNOWLEDGE any re-use of this dataset in any research outputs where reliance is made upon it, including conference papers and published research papers.",
          "I FURTHER AGREE TO A SHARE ALIKE RESTRICTION on this dataset, or any data included in it, which means that I Agree that I remix, transform or build upon the data, I will contributions on the same Share Alike basis as the original.",
          "The agreed form of acknowledgement is a full citation as presented on the UQ eSpace record for this record for this dataset.",
        ],
        "link": "http://guides.library.uq.edu.au/deposit_your_data/terms_and_conditions",
        "text": "Permitted Re-Use with Share Alike Requirement",
        "value": 454105,
      },
    ]
  }
  label="License selector field"
  locale={
    Object {
      "label": "License selector field",
    }
  }
  meta={
    Object {
      "error": "This field is required",
    }
  }
  onChange={[MockFunction]}
  value={
    Array [
      "test",
      "test1",
    ]
  }
/>
`;

exports[`LicenceSelectorField component should render with deprecated list 1`] = `
<GenericSelectField
  canUnselect={true}
  error={false}
  errorText=""
  genericSelectFieldId="rek-license"
  hideLabel={false}
  input={
    Object {
      "onChange": [MockFunction],
      "value": Array [
        "test",
        "test1",
      ],
    }
  }
  isAdmin={true}
  itemsList={
    Array [
      Object {
        "text": "None",
        "value": -1,
      },
      Object {
        "text": "Permitted Re-use with Acknowledgement http://guides.library.uq.edu.au/deposit_your_data/terms_and_conditions",
        "value": 453701,
      },
      Object {
        "text": "Permitted Re-Use with Commercial Use Restriction http://guides.library.uq.edu.au/deposit_your_data/terms_and_conditions",
        "value": 454104,
      },
      Object {
        "text": "Permitted Re-Use with Share Alike Requirement http://guides.library.uq.edu.au/deposit_your_data/terms_and_conditions",
        "value": 454105,
      },
      Object {
        "text": "Creative Commons Attribution (only) http://creativecommons.org/licenses/by/3.0/deed.en_US",
        "value": 453608,
      },
      Object {
        "text": "Creative Commons Attribution no derivatives http://creativecommons.org/licenses/by-nd/3.0/deed.en_US",
        "value": 453609,
      },
      Object {
        "text": "Creative Commons Attribution noncommercial http://creativecommons.org/licenses/by-nc/3.0/deed.en_US",
        "value": 453610,
      },
      Object {
        "text": "Creative Commons Attribution noncommercial no derivatives http://creativecommons.org/licenses/by-nc-nd/3.0/deed.en_US",
        "value": 453611,
      },
      Object {
        "text": "Creative Commons Attribution noncommercial share alike http://creativecommons.org/licenses/by-nc-sa/3.0/deed.en_US ",
        "value": 453612,
      },
      Object {
        "text": "Creative Commons Attribution share alike http://creativecommons.org/licenses/by-sa/3.0/deed.en_US",
        "value": 453613,
      },
      Object {
        "text": "Permitted Non-commercial Re-use with Acknowledgement http://guides.library.uq.edu.au/deposit_your_data/terms_and_conditions",
        "value": 453702,
      },
    ]
  }
  label="License selector field"
  locale={
    Object {
      "label": "License selector field",
    }
  }
  onChange={[MockFunction]}
  value={
    Array [
      "test",
      "test1",
    ]
  }
/>
`;
